--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         </style>
     </head>
     <body>
-        <script type="module" src="src/game.ts"></script>
+        <script type="module" src="/src/game.ts"></script>
     </body>
 </html>
